frontend done of typing game app

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,24 +4,34 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
   }
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+}
+/* BlinkingCursor.css */
+/* BlinkingCursor.css */
+@keyframes cursorBlink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+}
+
+.cursor {
+  display: inline-block;
+  width: 2px; /* Adjust the width of the cursor as needed */
+  height: 0.8em; /* Adjust the height of the cursor as needed */
+  background-color: white; /* Adjust the cursor color */
+  animation: cursorBlink 1s infinite;
+  position: relative;
 }
